This style change was necessary to keep the mode switch fixed in dark mode

--- a/docs/odata-data-aggregation-ext/styles/odata.css
+++ b/docs/odata-data-aggregation-ext/styles/odata.css
@@ -209,6 +209,9 @@ hr:first-of-type {
 
   body.darkmode {
     background-color: black;
+  }
+
+  body.darkmode details {
     filter: invert(100%);
   }
 
